applications/noel/ApplicationRegistrations/coral-demo-java-app/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noel-coral-demo-java-app-development
